byrja að bæta við valnamskeid

--- a/TV-5.ipynb
+++ b/TV-5.ipynb
@@ -326,34 +326,47 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": 48,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "['Hjúkrunarstjórnun HJÚ714G',\n",
+              " 'Heimahjúkrun HJÚ711G',\n",
+              " 'Barnahjúkrun HJÚ715G',\n",
+              " 'Bráðahjúkrun HJÚ824G']"
+            ]
+          },
+          "execution_count": 48,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "namskeid"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 47,
       "metadata": {
         "id": "Y62zH0M5QdrZ"
       },
       "outputs": [
         {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Gurobi Optimizer version 9.5.1 build v9.5.1rc2 (win64)\n",
-            "Thread count: 4 physical cores, 8 logical processors, using up to 8 threads\n",
-            "Optimize a model with 4353 rows, 65120 columns and 313760 nonzeros\n",
-            "Model fingerprint: 0x4f018b40\n",
-            "Variable types: 2960 continuous, 62160 integer (62160 binary)\n",
-            "Coefficient statistics:\n",
-            "  Matrix range     [1e+00, 1e+00]\n",
-            "  Objective range  [0e+00, 0e+00]\n",
-            "  Bounds range     [1e+00, 1e+00]\n",
-            "  RHS range        [1e+00, 3e+01]\n",
-            "Found heuristic solution: objective 0.0000000\n",
-            "\n",
-            "Explored 0 nodes (0 simplex iterations) in 0.02 seconds (0.01 work units)\n",
-            "Thread count was 1 (of 8 available processors)\n",
-            "\n",
-            "Solution count 1: 0 \n",
-            "\n",
-            "Optimal solution found (tolerance 1.00e-04)\n",
-            "Best objective 0.000000000000e+00, best bound 0.000000000000e+00, gap 0.0000%\n"
+          "ename": "KeyError",
+          "evalue": "(1, 'Hjúkrunarstjórnun HJÚ714G', '12/2/2020', 'Bráðahjúkrun HJÚ0AVM')",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+            "\u001b[1;32md:\\Skóli\\Vor\\Aðgerðar\\TV5\\TV-5.ipynb Cell 11'\u001b[0m in \u001b[0;36m<cell line: 40>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Sk%C3%B3li/Vor/A%C3%B0ger%C3%B0ar/TV5/TV-5.ipynb#ch0000008?line=29'>30</a>\u001b[0m m\u001b[39m.\u001b[39maddConstrs(\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Sk%C3%B3li/Vor/A%C3%B0ger%C3%B0ar/TV5/TV-5.ipynb#ch0000008?line=30'>31</a>\u001b[0m     gp\u001b[39m.\u001b[39mquicksum(x[s,c,d,k] \u001b[39mfor\u001b[39;00m s \u001b[39min\u001b[39;00m nemendur) \n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Sk%C3%B3li/Vor/A%C3%B0ger%C3%B0ar/TV5/TV-5.ipynb#ch0000008?line=31'>32</a>\u001b[0m     \u001b[39m<\u001b[39m\u001b[39m=\u001b[39m plass_a_deild\u001b[39m.\u001b[39mloc[k,d] \u001b[39mfor\u001b[39;00m c \u001b[39min\u001b[39;00m namskeid \u001b[39mfor\u001b[39;00m k \u001b[39min\u001b[39;00m deild[c] \u001b[39mfor\u001b[39;00m d \u001b[39min\u001b[39;00m dagsetning\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Sk%C3%B3li/Vor/A%C3%B0ger%C3%B0ar/TV5/TV-5.ipynb#ch0000008?line=32'>33</a>\u001b[0m )\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Sk%C3%B3li/Vor/A%C3%B0ger%C3%B0ar/TV5/TV-5.ipynb#ch0000008?line=34'>35</a>\u001b[0m \u001b[39m# m.addContrs(\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Sk%C3%B3li/Vor/A%C3%B0ger%C3%B0ar/TV5/TV-5.ipynb#ch0000008?line=35'>36</a>\u001b[0m \u001b[39m#     x[s,c,d,'Bráðahjúkrun HJÚ0AVM'] <=  x[s,c,d,'Bráðahjúkrun HJÚ824G']\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Sk%C3%B3li/Vor/A%C3%B0ger%C3%B0ar/TV5/TV-5.ipynb#ch0000008?line=36'>37</a>\u001b[0m \u001b[39m#     for s in nemendur for c in namskeid for d in dagsetning\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Sk%C3%B3li/Vor/A%C3%B0ger%C3%B0ar/TV5/TV-5.ipynb#ch0000008?line=37'>38</a>\u001b[0m \u001b[39m# )\u001b[39;00m\n\u001b[1;32m---> <a href='vscode-notebook-cell:/d%3A/Sk%C3%B3li/Vor/A%C3%B0ger%C3%B0ar/TV5/TV-5.ipynb#ch0000008?line=39'>40</a>\u001b[0m m\u001b[39m.\u001b[39;49maddConstrs(\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Sk%C3%B3li/Vor/A%C3%B0ger%C3%B0ar/TV5/TV-5.ipynb#ch0000008?line=40'>41</a>\u001b[0m     gp\u001b[39m.\u001b[39;49mquicksum(x[s,c,de,\u001b[39m'\u001b[39;49m\u001b[39mBráðahjúkrun HJÚ0AVM\u001b[39;49m\u001b[39m'\u001b[39;49m] \u001b[39mfor\u001b[39;49;00m de \u001b[39min\u001b[39;49;00m dagsetning[haustprof:])\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Sk%C3%B3li/Vor/A%C3%B0ger%C3%B0ar/TV5/TV-5.ipynb#ch0000008?line=41'>42</a>\u001b[0m     \u001b[39m<\u001b[39;49m\u001b[39m=\u001b[39;49m gp\u001b[39m.\u001b[39;49mquicksum(x[s,c,df,\u001b[39m'\u001b[39;49m\u001b[39mBráðahjúkrun HJÚ824G\u001b[39;49m\u001b[39m'\u001b[39;49m] \u001b[39mfor\u001b[39;49;00m df \u001b[39min\u001b[39;49;00m dagsetning[:haustprof])\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Sk%C3%B3li/Vor/A%C3%B0ger%C3%B0ar/TV5/TV-5.ipynb#ch0000008?line=42'>43</a>\u001b[0m     \u001b[39mfor\u001b[39;49;00m s \u001b[39min\u001b[39;49;00m nemendur \u001b[39mfor\u001b[39;49;00m c \u001b[39min\u001b[39;49;00m namskeid\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Sk%C3%B3li/Vor/A%C3%B0ger%C3%B0ar/TV5/TV-5.ipynb#ch0000008?line=43'>44</a>\u001b[0m )\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Sk%C3%B3li/Vor/A%C3%B0ger%C3%B0ar/TV5/TV-5.ipynb#ch0000008?line=47'>48</a>\u001b[0m \u001b[39m#m.setObjective(gp.quicksum(x[s,c,d,k] for s in nemendur for c in namskeid for d in dagsetning for k in deild[c]), gp.GRB.MAXIMIZE)\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Sk%C3%B3li/Vor/A%C3%B0ger%C3%B0ar/TV5/TV-5.ipynb#ch0000008?line=50'>51</a>\u001b[0m m\u001b[39m.\u001b[39moptimize()\n",
+            "File \u001b[1;32msrc\\gurobipy\\model.pxi:3535\u001b[0m, in \u001b[0;36mgurobipy.Model.addConstrs\u001b[1;34m()\u001b[0m\n",
+            "\u001b[1;32md:\\Skóli\\Vor\\Aðgerðar\\TV5\\TV-5.ipynb Cell 11'\u001b[0m in \u001b[0;36m<genexpr>\u001b[1;34m(.0)\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Sk%C3%B3li/Vor/A%C3%B0ger%C3%B0ar/TV5/TV-5.ipynb#ch0000008?line=29'>30</a>\u001b[0m m\u001b[39m.\u001b[39maddConstrs(\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Sk%C3%B3li/Vor/A%C3%B0ger%C3%B0ar/TV5/TV-5.ipynb#ch0000008?line=30'>31</a>\u001b[0m     gp\u001b[39m.\u001b[39mquicksum(x[s,c,d,k] \u001b[39mfor\u001b[39;00m s \u001b[39min\u001b[39;00m nemendur) \n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Sk%C3%B3li/Vor/A%C3%B0ger%C3%B0ar/TV5/TV-5.ipynb#ch0000008?line=31'>32</a>\u001b[0m     \u001b[39m<\u001b[39m\u001b[39m=\u001b[39m plass_a_deild\u001b[39m.\u001b[39mloc[k,d] \u001b[39mfor\u001b[39;00m c \u001b[39min\u001b[39;00m namskeid \u001b[39mfor\u001b[39;00m k \u001b[39min\u001b[39;00m deild[c] \u001b[39mfor\u001b[39;00m d \u001b[39min\u001b[39;00m dagsetning\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Sk%C3%B3li/Vor/A%C3%B0ger%C3%B0ar/TV5/TV-5.ipynb#ch0000008?line=32'>33</a>\u001b[0m )\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Sk%C3%B3li/Vor/A%C3%B0ger%C3%B0ar/TV5/TV-5.ipynb#ch0000008?line=34'>35</a>\u001b[0m \u001b[39m# m.addContrs(\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Sk%C3%B3li/Vor/A%C3%B0ger%C3%B0ar/TV5/TV-5.ipynb#ch0000008?line=35'>36</a>\u001b[0m \u001b[39m#     x[s,c,d,'Bráðahjúkrun HJÚ0AVM'] <=  x[s,c,d,'Bráðahjúkrun HJÚ824G']\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Sk%C3%B3li/Vor/A%C3%B0ger%C3%B0ar/TV5/TV-5.ipynb#ch0000008?line=36'>37</a>\u001b[0m \u001b[39m#     for s in nemendur for c in namskeid for d in dagsetning\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Sk%C3%B3li/Vor/A%C3%B0ger%C3%B0ar/TV5/TV-5.ipynb#ch0000008?line=37'>38</a>\u001b[0m \u001b[39m# )\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Sk%C3%B3li/Vor/A%C3%B0ger%C3%B0ar/TV5/TV-5.ipynb#ch0000008?line=39'>40</a>\u001b[0m m\u001b[39m.\u001b[39maddConstrs(\n\u001b[1;32m---> <a href='vscode-notebook-cell:/d%3A/Sk%C3%B3li/Vor/A%C3%B0ger%C3%B0ar/TV5/TV-5.ipynb#ch0000008?line=40'>41</a>\u001b[0m     gp\u001b[39m.\u001b[39;49mquicksum(x[s,c,de,\u001b[39m'\u001b[39;49m\u001b[39mBráðahjúkrun HJÚ0AVM\u001b[39;49m\u001b[39m'\u001b[39;49m] \u001b[39mfor\u001b[39;49;00m de \u001b[39min\u001b[39;49;00m dagsetning[haustprof:])\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Sk%C3%B3li/Vor/A%C3%B0ger%C3%B0ar/TV5/TV-5.ipynb#ch0000008?line=41'>42</a>\u001b[0m     \u001b[39m<\u001b[39m\u001b[39m=\u001b[39m gp\u001b[39m.\u001b[39mquicksum(x[s,c,df,\u001b[39m'\u001b[39m\u001b[39mBráðahjúkrun HJÚ824G\u001b[39m\u001b[39m'\u001b[39m] \u001b[39mfor\u001b[39;00m df \u001b[39min\u001b[39;00m dagsetning[:haustprof])\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Sk%C3%B3li/Vor/A%C3%B0ger%C3%B0ar/TV5/TV-5.ipynb#ch0000008?line=42'>43</a>\u001b[0m     \u001b[39mfor\u001b[39;00m s \u001b[39min\u001b[39;00m nemendur \u001b[39mfor\u001b[39;00m c \u001b[39min\u001b[39;00m namskeid\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Sk%C3%B3li/Vor/A%C3%B0ger%C3%B0ar/TV5/TV-5.ipynb#ch0000008?line=43'>44</a>\u001b[0m )\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Sk%C3%B3li/Vor/A%C3%B0ger%C3%B0ar/TV5/TV-5.ipynb#ch0000008?line=47'>48</a>\u001b[0m \u001b[39m#m.setObjective(gp.quicksum(x[s,c,d,k] for s in nemendur for c in namskeid for d in dagsetning for k in deild[c]), gp.GRB.MAXIMIZE)\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Sk%C3%B3li/Vor/A%C3%B0ger%C3%B0ar/TV5/TV-5.ipynb#ch0000008?line=50'>51</a>\u001b[0m m\u001b[39m.\u001b[39moptimize()\n",
+            "File \u001b[1;32msrc\\gurobipy\\gurobi.pxi:3631\u001b[0m, in \u001b[0;36mgurobipy.quicksum\u001b[1;34m()\u001b[0m\n",
+            "\u001b[1;32md:\\Skóli\\Vor\\Aðgerðar\\TV5\\TV-5.ipynb Cell 11'\u001b[0m in \u001b[0;36m<genexpr>\u001b[1;34m(.0)\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Sk%C3%B3li/Vor/A%C3%B0ger%C3%B0ar/TV5/TV-5.ipynb#ch0000008?line=29'>30</a>\u001b[0m m\u001b[39m.\u001b[39maddConstrs(\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Sk%C3%B3li/Vor/A%C3%B0ger%C3%B0ar/TV5/TV-5.ipynb#ch0000008?line=30'>31</a>\u001b[0m     gp\u001b[39m.\u001b[39mquicksum(x[s,c,d,k] \u001b[39mfor\u001b[39;00m s \u001b[39min\u001b[39;00m nemendur) \n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Sk%C3%B3li/Vor/A%C3%B0ger%C3%B0ar/TV5/TV-5.ipynb#ch0000008?line=31'>32</a>\u001b[0m     \u001b[39m<\u001b[39m\u001b[39m=\u001b[39m plass_a_deild\u001b[39m.\u001b[39mloc[k,d] \u001b[39mfor\u001b[39;00m c \u001b[39min\u001b[39;00m namskeid \u001b[39mfor\u001b[39;00m k \u001b[39min\u001b[39;00m deild[c] \u001b[39mfor\u001b[39;00m d \u001b[39min\u001b[39;00m dagsetning\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Sk%C3%B3li/Vor/A%C3%B0ger%C3%B0ar/TV5/TV-5.ipynb#ch0000008?line=32'>33</a>\u001b[0m )\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Sk%C3%B3li/Vor/A%C3%B0ger%C3%B0ar/TV5/TV-5.ipynb#ch0000008?line=34'>35</a>\u001b[0m \u001b[39m# m.addContrs(\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Sk%C3%B3li/Vor/A%C3%B0ger%C3%B0ar/TV5/TV-5.ipynb#ch0000008?line=35'>36</a>\u001b[0m \u001b[39m#     x[s,c,d,'Bráðahjúkrun HJÚ0AVM'] <=  x[s,c,d,'Bráðahjúkrun HJÚ824G']\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Sk%C3%B3li/Vor/A%C3%B0ger%C3%B0ar/TV5/TV-5.ipynb#ch0000008?line=36'>37</a>\u001b[0m \u001b[39m#     for s in nemendur for c in namskeid for d in dagsetning\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Sk%C3%B3li/Vor/A%C3%B0ger%C3%B0ar/TV5/TV-5.ipynb#ch0000008?line=37'>38</a>\u001b[0m \u001b[39m# )\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Sk%C3%B3li/Vor/A%C3%B0ger%C3%B0ar/TV5/TV-5.ipynb#ch0000008?line=39'>40</a>\u001b[0m m\u001b[39m.\u001b[39maddConstrs(\n\u001b[1;32m---> <a href='vscode-notebook-cell:/d%3A/Sk%C3%B3li/Vor/A%C3%B0ger%C3%B0ar/TV5/TV-5.ipynb#ch0000008?line=40'>41</a>\u001b[0m     gp\u001b[39m.\u001b[39mquicksum(x[s,c,de,\u001b[39m'\u001b[39;49m\u001b[39mBráðahjúkrun HJÚ0AVM\u001b[39;49m\u001b[39m'\u001b[39;49m] \u001b[39mfor\u001b[39;00m de \u001b[39min\u001b[39;00m dagsetning[haustprof:])\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Sk%C3%B3li/Vor/A%C3%B0ger%C3%B0ar/TV5/TV-5.ipynb#ch0000008?line=41'>42</a>\u001b[0m     \u001b[39m<\u001b[39m\u001b[39m=\u001b[39m gp\u001b[39m.\u001b[39mquicksum(x[s,c,df,\u001b[39m'\u001b[39m\u001b[39mBráðahjúkrun HJÚ824G\u001b[39m\u001b[39m'\u001b[39m] \u001b[39mfor\u001b[39;00m df \u001b[39min\u001b[39;00m dagsetning[:haustprof])\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Sk%C3%B3li/Vor/A%C3%B0ger%C3%B0ar/TV5/TV-5.ipynb#ch0000008?line=42'>43</a>\u001b[0m     \u001b[39mfor\u001b[39;00m s \u001b[39min\u001b[39;00m nemendur \u001b[39mfor\u001b[39;00m c \u001b[39min\u001b[39;00m namskeid\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Sk%C3%B3li/Vor/A%C3%B0ger%C3%B0ar/TV5/TV-5.ipynb#ch0000008?line=43'>44</a>\u001b[0m )\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Sk%C3%B3li/Vor/A%C3%B0ger%C3%B0ar/TV5/TV-5.ipynb#ch0000008?line=47'>48</a>\u001b[0m \u001b[39m#m.setObjective(gp.quicksum(x[s,c,d,k] for s in nemendur for c in namskeid for d in dagsetning for k in deild[c]), gp.GRB.MAXIMIZE)\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Sk%C3%B3li/Vor/A%C3%B0ger%C3%B0ar/TV5/TV-5.ipynb#ch0000008?line=50'>51</a>\u001b[0m m\u001b[39m.\u001b[39moptimize()\n",
+            "\u001b[1;31mKeyError\u001b[0m: (1, 'Hjúkrunarstjórnun HJÚ714G', '12/2/2020', 'Bráðahjúkrun HJÚ0AVM')"
           ]
         }
       ],
@@ -392,6 +405,16 @@
         "    <= plass_a_deild.loc[k,d] for c in namskeid for k in deild[c] for d in dagsetning\n",
         ")\n",
         "\n",
+        "# m.addContrs(\n",
+        "#     x[s,c,d,'Bráðahjúkrun HJÚ0AVM'] <=  x[s,c,d,'Bráðahjúkrun HJÚ824G']\n",
+        "#     for s in nemendur for c in namskeid for d in dagsetning\n",
+        "# )\n",
+        "\n",
+        "m.addConstrs(\n",
+        "    gp.quicksum(x[s,'Bráðahjúkrun HJÚ0AVM',de,k] for de in dagsetning[haustprof:])\n",
+        "    <= gp.quicksum(x[s,'Bráðahjúkrun HJÚ824G',df,k] for df in dagsetning[:haustprof])\n",
+        "    for s in nemendur for k in deild['Bráðahjúkrun HJÚ824G']\n",
+        ")\n",
         "\n",
         "\n",
         "\n",
