--- a/TV-5.ipynb
+++ b/TV-5.ipynb
@@ -233,7 +233,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 72,
       "metadata": {
         "id": "KowUU2DgQZYa"
       },
@@ -304,7 +304,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 36,
       "metadata": {},
       "outputs": [
         {
@@ -322,137 +322,80 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 37,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "{1: ['Konur heilsa og samfélag HJÚ827M', 'Kynheilbrigði HJÚ823M'],\n",
-              " 2: ['Bráðahjúkrun HJÚ0AVM', 'Andvari: Gjörgæsluhjúkrun HJÚ824M'],\n",
-              " 3: ['Andvari: Gjörgæsluhjúkrun HJÚ824M', 'Líknarmeðferð HJÚ0AXM'],\n",
-              " 4: ['Andvari: Gjörgæsluhjúkrun HJÚ824M', 'Bráðahjúkrun HJÚ0AVM'],\n",
-              " 5: ['Bráðahjúkrun HJÚ0AVM', 'Andvari: Gjörgæsluhjúkrun HJÚ824M'],\n",
-              " 6: ['Andvari: Gjörgæsluhjúkrun HJÚ824M', 'Bráðahjúkrun HJÚ0AVM'],\n",
-              " 7: [],\n",
-              " 8: ['Andvari: Gjörgæsluhjúkrun HJÚ824M', 'Bráðahjúkrun HJÚ0AVM'],\n",
-              " 9: ['Bráðahjúkrun HJÚ0AVM', 'Andvari: Gjörgæsluhjúkrun HJÚ824M'],\n",
-              " 10: ['Andvari: Gjörgæsluhjúkrun HJÚ824M', 'Bráðahjúkrun HJÚ0AVM'],\n",
-              " 11: ['Líknarmeðferð HJÚ0AXM'],\n",
-              " 12: ['Konur heilsa og samfélag HJÚ827M', 'Kynheilbrigði HJÚ823M'],\n",
-              " 13: ['Andvari: Gjörgæsluhjúkrun HJÚ824M', 'Bráðahjúkrun HJÚ0AVM'],\n",
-              " 14: ['Konur heilsa og samfélag HJÚ827M', 'Andvari: Gjörgæsluhjúkrun HJÚ824M'],\n",
-              " 15: ['Bráðahjúkrun HJÚ0AVM'],\n",
-              " 16: ['Kynheilbrigði HJÚ823M', 'Andvari: Gjörgæsluhjúkrun HJÚ824M'],\n",
-              " 17: ['Líknarmeðferð HJÚ0AXM'],\n",
-              " 18: ['Konur heilsa og samfélag HJÚ827M', 'Kynheilbrigði HJÚ823M'],\n",
-              " 19: ['Andvari: Gjörgæsluhjúkrun HJÚ824M', 'Bráðahjúkrun HJÚ0AVM'],\n",
-              " 20: ['Andvari: Gjörgæsluhjúkrun HJÚ824M', 'Bráðahjúkrun HJÚ0AVM'],\n",
-              " 21: ['Andvari: Gjörgæsluhjúkrun HJÚ824M', 'Bráðahjúkrun HJÚ0AVM'],\n",
-              " 22: [],\n",
-              " 23: ['Andvari: Gjörgæsluhjúkrun HJÚ824M', 'Líknarmeðferð HJÚ0AXM'],\n",
-              " 24: ['Konur heilsa og samfélag HJÚ827M', 'Kynheilbrigði HJÚ823M'],\n",
-              " 25: ['Kynheilbrigði HJÚ823M',\n",
-              "  'Konur heilsa og samfélag HJÚ827M',\n",
-              "  'Bráðahjúkrun HJÚ0AVM'],\n",
-              " 26: ['Kynheilbrigði HJÚ823M', 'Konur heilsa og samfélag HJÚ827M'],\n",
-              " 27: [],\n",
-              " 28: ['Andvari: Gjörgæsluhjúkrun HJÚ824M', 'Líknarmeðferð HJÚ0AXM'],\n",
-              " 29: ['Konur heilsa og samfélag HJÚ827M', 'Kynheilbrigði HJÚ823M'],\n",
-              " 30: ['Andvari: Gjörgæsluhjúkrun HJÚ824M', 'Bráðahjúkrun HJÚ0AVM'],\n",
-              " 31: ['Konur heilsa og samfélag HJÚ827M', 'Kynheilbrigði HJÚ823M'],\n",
-              " 32: ['Konur heilsa og samfélag HJÚ827M', 'Kynheilbrigði HJÚ823M'],\n",
-              " 33: ['Andvari: Gjörgæsluhjúkrun HJÚ824M', 'Líknarmeðferð HJÚ0AXM'],\n",
-              " 34: ['Líknarmeðferð HJÚ0AXM'],\n",
-              " 35: ['Kynheilbrigði HJÚ823M', 'Konur heilsa og samfélag HJÚ827M'],\n",
-              " 36: [],\n",
-              " 37: ['Andvari: Gjörgæsluhjúkrun HJÚ824M', 'Kynheilbrigði HJÚ823M'],\n",
-              " 38: ['Bráðahjúkrun HJÚ0AVM', 'Andvari: Gjörgæsluhjúkrun HJÚ824M'],\n",
-              " 39: ['Andvari: Gjörgæsluhjúkrun HJÚ824M', 'Bráðahjúkrun HJÚ0AVM'],\n",
-              " 40: ['Andvari: Gjörgæsluhjúkrun HJÚ824M', 'Líknarmeðferð HJÚ0AXM'],\n",
-              " 41: [],\n",
-              " 42: ['Bráðahjúkrun HJÚ0AVM', 'Andvari: Gjörgæsluhjúkrun HJÚ824M'],\n",
-              " 43: ['Andvari: Gjörgæsluhjúkrun HJÚ824M', 'Bráðahjúkrun HJÚ0AVM'],\n",
-              " 44: ['Konur heilsa og samfélag HJÚ827M', 'Kynheilbrigði HJÚ823M'],\n",
-              " 45: ['Andvari: Gjörgæsluhjúkrun HJÚ824M'],\n",
-              " 46: ['Bráðahjúkrun HJÚ0AVM', 'Andvari: Gjörgæsluhjúkrun HJÚ824M'],\n",
-              " 47: ['Konur heilsa og samfélag HJÚ827M',\n",
-              "  'Kynheilbrigði HJÚ823M',\n",
-              "  'Bráðahjúkrun HJÚ0AVM'],\n",
-              " 48: ['Andvari: Gjörgæsluhjúkrun HJÚ824M',\n",
-              "  'Bráðahjúkrun HJÚ0AVM',\n",
-              "  'Kynheilbrigði HJÚ823M'],\n",
-              " 49: [],\n",
-              " 50: ['Konur heilsa og samfélag HJÚ827M', 'Kynheilbrigði HJÚ823M'],\n",
-              " 51: ['Bráðahjúkrun HJÚ0AVM'],\n",
-              " 52: [],\n",
-              " 53: ['Konur heilsa og samfélag HJÚ827M', 'Kynheilbrigði HJÚ823M'],\n",
-              " 54: [],\n",
-              " 55: ['Andvari: Gjörgæsluhjúkrun HJÚ824M', 'Líknarmeðferð HJÚ0AXM'],\n",
-              " 56: ['Konur heilsa og samfélag HJÚ827M', 'Kynheilbrigði HJÚ823M'],\n",
-              " 57: ['Konur heilsa og samfélag HJÚ827M', 'Kynheilbrigði HJÚ823M'],\n",
-              " 58: ['Kynheilbrigði HJÚ823M', 'Andvari: Gjörgæsluhjúkrun HJÚ824M'],\n",
-              " 59: ['Konur heilsa og samfélag HJÚ827M', 'Kynheilbrigði HJÚ823M'],\n",
-              " 60: ['Konur heilsa og samfélag HJÚ827M', 'Kynheilbrigði HJÚ823M'],\n",
-              " 61: ['Konur heilsa og samfélag HJÚ827M', 'Kynheilbrigði HJÚ823M'],\n",
-              " 62: ['Konur heilsa og samfélag HJÚ827M', 'Kynheilbrigði HJÚ823M'],\n",
-              " 63: ['Andvari: Gjörgæsluhjúkrun HJÚ824M', 'Bráðahjúkrun HJÚ0AVM'],\n",
-              " 64: ['Kynheilbrigði HJÚ823M',\n",
-              "  'Bráðahjúkrun HJÚ0AVM',\n",
-              "  'Konur heilsa og samfélag HJÚ827M'],\n",
-              " 65: ['Andvari: Gjörgæsluhjúkrun HJÚ824M', 'Bráðahjúkrun HJÚ0AVM'],\n",
-              " 66: ['Konur heilsa og samfélag HJÚ827M', 'Kynheilbrigði HJÚ823M'],\n",
-              " 67: ['Andvari: Gjörgæsluhjúkrun HJÚ824M', 'Bráðahjúkrun HJÚ0AVM'],\n",
-              " 68: ['Konur heilsa og samfélag HJÚ827M', 'Kynheilbrigði HJÚ823M'],\n",
-              " 69: ['Konur heilsa og samfélag HJÚ827M', 'Kynheilbrigði HJÚ823M'],\n",
-              " 70: ['Andvari: Gjörgæsluhjúkrun HJÚ824M', 'Bráðahjúkrun HJÚ0AVM'],\n",
-              " 71: ['Konur heilsa og samfélag HJÚ827M', 'Kynheilbrigði HJÚ823M'],\n",
-              " 72: ['Kynheilbrigði HJÚ823M', 'Líknarmeðferð HJÚ0AXM'],\n",
-              " 73: [],\n",
-              " 74: [],\n",
-              " 75: ['Konur heilsa og samfélag HJÚ827M', 'Kynheilbrigði HJÚ823M'],\n",
-              " 76: ['Konur heilsa og samfélag HJÚ827M', 'Kynheilbrigði HJÚ823M'],\n",
-              " 77: ['Konur heilsa og samfélag HJÚ827M', 'Kynheilbrigði HJÚ823M'],\n",
-              " 78: ['Konur heilsa og samfélag HJÚ827M', 'Kynheilbrigði HJÚ823M'],\n",
-              " 79: ['Konur heilsa og samfélag HJÚ827M', 'Kynheilbrigði HJÚ823M'],\n",
-              " 80: ['Andvari: Gjörgæsluhjúkrun HJÚ824M']}"
-            ]
-          },
-          "execution_count": 24,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": [
-        "valnamskeid_nemendur"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 27,
-      "metadata": {},
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "['Hjúkrunarstjórnun HJÚ714G',\n",
-              " 'Heimahjúkrun HJÚ711G',\n",
-              " 'Barnahjúkrun HJÚ715G',\n",
-              " 'Bráðahjúkrun HJÚ824G',\n",
-              " 'Bráðahjúkrun HJÚ0AVM',\n",
+              "['Bráðahjúkrun HJÚ0AVM',\n",
               " 'Andvari: Gjörgæsluhjúkrun HJÚ824M',\n",
               " 'Kynheilbrigði HJÚ823M',\n",
               " 'Konur heilsa og samfélag HJÚ827M',\n",
               " 'Líknarmeðferð HJÚ0AXM']"
             ]
           },
-          "execution_count": 27,
+          "execution_count": 37,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
-        "namskeid+valnamskeid"
+        "valnamskeid"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 74,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "diff 1\n",
+            "diff 1\n",
+            "diff 1\n"
+          ]
+        }
+      ],
+      "source": [
+        "passar = []\n",
+        "passar_ekki = []\n",
+        "for dagur in dagsetning:\n",
+        "    sum_a = sum(plass_a_deild[dagur].to_list())\n",
+        "    sum_b = sum(klinik_fjoldi[dagur].to_list())\n",
+        "    if sum_a == sum_b:\n",
+        "        passar.append(dagur)\n",
+        "    else:\n",
+        "        print(\"diff\", sum_a-sum_b)\n",
+        "        passar_ekki.append(dagur)\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 92,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Hjúkrunarstjórnun HJÚ714G\n",
+            "Fjöldi af skráðum nemendum = 76, pláss á deild = 85\n",
+            "Heimahjúkrun HJÚ711G\n",
+            "Fjöldi af skráðum nemendum = 77, pláss á deild = 84\n",
+            "Barnahjúkrun HJÚ715G\n",
+            "Fjöldi af skráðum nemendum = 80, pláss á deild = 80\n",
+            "Bráðahjúkrun HJÚ824G\n",
+            "Fjöldi af skráðum nemendum = 78, pláss á deild = 84\n"
+          ]
+        }
+      ],
+      "source": [
+        "for x in nemendur_skraning:\n",
+        "    print(f\"{x}:\")\n",
+        "    print(f\"Fjöldi af skráðum nemendum = {sum(nemendur_skraning[x].to_list())}, pláss á deild = {sum(klinik_fjoldi.loc[x, :].to_list())}\")"
       ]
     },
     {
