--- a/TV-5.ipynb
+++ b/TV-5.ipynb
@@ -227,13 +227,17 @@
         "         'Heimahjúkrun HJÚ711G': ['landsbyggd','hofudborgarsvaedi'],\n",
         "         'Barnahjúkrun HJÚ715G': ['barna'],\n",
         "         'Bráðahjúkrun HJÚ824G': ['brada'] }\n",
-        "\n",
-        "for x in valnamskeid: deild[x] = ['val'] # ???"
+        "### BREYTING\n",
+        "#\n",
+        "#   bætum við valnámskeiðum\n",
+        "#\n",
+        "###\n",
+        "for x in valnamskeid: deild[x] = ['val']"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 72,
+      "execution_count": 111,
       "metadata": {
         "id": "KowUU2DgQZYa"
       },
@@ -251,7 +255,13 @@
         "plass_a_deild.loc['landsbyggd',['8/30/2021','9/13/2021','9/27/2021','10/4/2021','11/8/2021','11/15/2021']] = [4,4,4,4,4,4]\n",
         "plass_a_deild.loc['barna',['11/8/2021','11/15/2021','1/31/2022','2/7/2022','2/14/2022','2/21/2022','2/28/2022','3/7/2022','3/14/2022','3/28/2022']] = [8,8,8,8,8,8,8,8,8,8]\n",
         "plass_a_deild.loc['brada',['8/30/2021','9/13/2021','9/27/2021','10/4/2021','11/8/2021','11/15/2021','1/31/2022','2/7/2022','2/14/2022','2/21/2022','2/28/2022','3/7/2022','3/14/2022','3/21/2022']] = 6 \n",
-        "#plass_a_deild #.sum(axis=0)\n"
+        "\n",
+        "### BREYTING\n",
+        "#\n",
+        "# Bætum við hámarskfjölda fyrir valáfanga\n",
+        "#\n",
+        "###\n",
+        "plass_a_deild.loc['val', dagsetning[21:]] = 10\n"
       ]
     },
     {
@@ -287,75 +297,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 103,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "['Hjúkrunarstjórnun HJÚ714G', 'Heimahjúkrun HJÚ711G', 'Barnahjúkrun HJÚ715G', 'Bráðahjúkrun HJÚ824G', 'Bráðahjúkrun HJÚ0AVM', 'Andvari: Gjörgæsluhjúkrun HJÚ824M', 'Kynheilbrigði HJÚ823M', 'Konur heilsa og samfélag HJÚ827M', 'Líknarmeðferð HJÚ0AXM']\n"
-          ]
-        }
-      ],
-      "source": [
-        "print(namskeid + valnamskeid)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 36,
-      "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "[2, 2, 2, 2, 2, 2, 0, 2, 2, 2, 1, 2, 2, 2, 1, 2, 1, 2, 2, 2, 2, 0, 2, 2, 3, 2, 0, 2, 2, 2, 2, 2, 2, 1, 2, 0, 2, 2, 2, 2, 0, 2, 2, 2, 1, 2, 3, 3, 0, 2, 1, 0, 2, 0, 2, 2, 2, 2, 2, 2, 2, 2, 2, 3, 2, 2, 2, 2, 2, 2, 2, 2, 0, 0, 2, 2, 2, 2, 2, 1]\n"
-          ]
-        }
-      ],
-      "source": [
-        "test = [len(valnamskeid_nemendur[x]) for x in valnamskeid_nemendur]\n",
-        "print(test)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 37,
-      "metadata": {},
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "['Bráðahjúkrun HJÚ0AVM',\n",
-              " 'Andvari: Gjörgæsluhjúkrun HJÚ824M',\n",
-              " 'Kynheilbrigði HJÚ823M',\n",
-              " 'Konur heilsa og samfélag HJÚ827M',\n",
-              " 'Líknarmeðferð HJÚ0AXM']"
-            ]
-          },
-          "execution_count": 37,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": [
-        "valnamskeid"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 74,
-      "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "diff 1\n",
-            "diff 1\n",
-            "diff 1\n"
+            "Passar ekki á 8/30/2021, mismunurinn er 1\n",
+            "Passar ekki á 9/13/2021, mismunurinn er 1\n",
+            "Passar ekki á 9/27/2021, mismunurinn er 1\n"
           ]
         }
       ],
@@ -368,39 +319,69 @@
         "    if sum_a == sum_b:\n",
         "        passar.append(dagur)\n",
         "    else:\n",
-        "        print(\"diff\", sum_a-sum_b)\n",
-        "        passar_ekki.append(dagur)\n"
+        "        print(f\"Passar ekki á {dagur}, mismunurinn er {sum_a-sum_b}\")\n",
+        "        passar_ekki.append(dagur)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 92,
+      "execution_count": 97,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Hjúkrunarstjórnun HJÚ714G\n",
-            "Fjöldi af skráðum nemendum = 76, pláss á deild = 85\n",
-            "Heimahjúkrun HJÚ711G\n",
-            "Fjöldi af skráðum nemendum = 77, pláss á deild = 84\n",
-            "Barnahjúkrun HJÚ715G\n",
-            "Fjöldi af skráðum nemendum = 80, pláss á deild = 80\n",
-            "Bráðahjúkrun HJÚ824G\n",
-            "Fjöldi af skráðum nemendum = 78, pláss á deild = 84\n"
+            "Hjúkrunarstjórnun HJÚ714G:\n",
+            "Fjöldi af skráðum nemendum = 76, pláss á klíník = 85\n",
+            "Heimahjúkrun HJÚ711G:\n",
+            "Fjöldi af skráðum nemendum = 77, pláss á klíník = 84\n",
+            "Barnahjúkrun HJÚ715G:\n",
+            "Fjöldi af skráðum nemendum = 80, pláss á klíník = 80\n",
+            "Bráðahjúkrun HJÚ824G:\n",
+            "Fjöldi af skráðum nemendum = 78, pláss á klíník = 84\n"
           ]
         }
       ],
       "source": [
         "for x in nemendur_skraning:\n",
         "    print(f\"{x}:\")\n",
-        "    print(f\"Fjöldi af skráðum nemendum = {sum(nemendur_skraning[x].to_list())}, pláss á deild = {sum(klinik_fjoldi.loc[x, :].to_list())}\")"
+        "    print(f\"Fjöldi af skráðum nemendum = {sum(nemendur_skraning[x].to_list())}, pláss á klíník = {sum(klinik_fjoldi.loc[x, :].to_list())}\")"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": 120,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Það eru 31 nemendur sem vilja skrá sig í Konur heilsa og samfélag HJÚ827M\n",
+            "Það eru 35 nemendur sem vilja skrá sig í Kynheilbrigði HJÚ823M\n",
+            "Það eru 27 nemendur sem vilja skrá sig í Bráðahjúkrun HJÚ0AVM\n",
+            "Það eru 34 nemendur sem vilja skrá sig í Andvari: Gjörgæsluhjúkrun HJÚ824M\n",
+            "Það eru 10 nemendur sem vilja skrá sig í Líknarmeðferð HJÚ0AXM\n"
+          ]
+        }
+      ],
+      "source": [
+        "fjoldi = {}\n",
+        "\n",
+        "for x in valnamskeid_nemendur:\n",
+        "    for s in valnamskeid_nemendur[x]:\n",
+        "        if s not in fjoldi:\n",
+        "            fjoldi[s] = 0\n",
+        "        fjoldi[s] += 1\n",
+        "\n",
+        "for s in fjoldi:\n",
+        "    print(f\"Það eru {fjoldi[s]} nemendur sem vilja skrá sig í {s}\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 98,
       "metadata": {
         "id": "Y62zH0M5QdrZ"
       },
@@ -411,15 +392,15 @@
           "text": [
             "Gurobi Optimizer version 9.5.1 build v9.5.1rc2 (win64)\n",
             "Thread count: 8 physical cores, 16 logical processors, using up to 16 threads\n",
-            "Optimize a model with 4342 rows, 79920 columns and 254614 nonzeros\n",
-            "Model fingerprint: 0x2e173ce9\n",
-            "Variable types: 2960 continuous, 76960 integer (76960 binary)\n",
+            "Optimize a model with 4342 rows, 80982 columns and 255676 nonzeros\n",
+            "Model fingerprint: 0xea77e40f\n",
+            "Variable types: 4022 continuous, 76960 integer (76960 binary)\n",
             "Coefficient statistics:\n",
             "  Matrix range     [1e+00, 1e+00]\n",
             "  Objective range  [0e+00, 0e+00]\n",
-            "  Bounds range     [1e+00, 1e+00]\n",
+            "  Bounds range     [1e+00, 3e+01]\n",
             "  RHS range        [1e+00, 3e+01]\n",
-            "Presolve removed 2923 rows and 73380 columns\n",
+            "Presolve removed 2923 rows and 74442 columns\n",
             "Presolve time: 0.10s\n",
             "Presolved: 1419 rows, 6540 columns, 24087 nonzeros\n",
             "Variable types: 0 continuous, 6540 integer (6540 binary)\n",
@@ -443,30 +424,34 @@
         "\n",
         "x = m.addVars([(s,c,d,k) for s in nemendur for c in (namskeid+valnamskeid) for d in dagsetning for k in deild[c]], vtype=gp.GRB.BINARY)\n",
         "\n",
-        "# Hér er dæmi um skorðu:\n",
+        "# Hér eru nemendur skráðir í áfangana\n",
         "m.addConstrs(\n",
         "    gp.quicksum(x[s,c,d,k] for d in dagsetning for k in deild[c]) \n",
         "    == nemendur_skraning.loc[s,c] for s in nemendur for c in namskeid\n",
         ")\n",
         "\n",
+        "# Hver nemandi getur bara tekið einn áfanga að hámarki fyrir hverja dagsetningu\n",
         "m.addConstrs(\n",
         "    gp.quicksum(x[s,c,d,k] for c in namskeid for k in deild[c]) \n",
         "    == [0,1] for d in dagsetning for s in nemendur\n",
         ")\n",
         "\n",
+        "# Hver klíník hefur hámarks pláss\n",
         "m.addConstrs(\n",
         "    gp.quicksum(x[s,c,d,k] for s in nemendur for k in deild[c]) \n",
-        "    <= klinik_fjoldi.loc[c,d] for c in namskeid for d in dagsetning\n",
+        "    == [0, klinik_fjoldi.loc[c,d]] for c in namskeid for d in dagsetning\n",
         ")\n",
         "\n",
+        "# Hver deild hefur hámarks pláss\n",
         "m.addConstrs(\n",
         "    gp.quicksum(x[s,c,d,k] for s in nemendur) \n",
-        "    <= plass_a_deild.loc[k,d] for c in namskeid for k in deild[c] for d in dagsetning\n",
+        "    == [0, plass_a_deild.loc[k,d]] for c in namskeid for k in deild[c] for d in dagsetning\n",
         ")\n",
         "\n",
+        "#\n",
         "m.addConstrs(\n",
         "    gp.quicksum(x[s,c,d,k] for d in dagsetning[haustprof:] for k in deild[c]) \n",
-        "    == 1 for s in nemendur for c in valnamskeid_nemendur[s]\n",
+        "    == [0,2] for s in nemendur for c in valnamskeid_nemendur[s]\n",
         ")\n",
         "\n",
         "m.optimize()"
@@ -516,7 +501,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": 99,
       "metadata": {
         "id": "09YcBza2Qtf5"
       },
@@ -5405,7 +5390,7 @@
               "80                           "
             ]
           },
-          "execution_count": 32,
+          "execution_count": 99,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -5423,12 +5408,6 @@
         "                    if c in ['Hjúkrunarstjórnun HJÚ714G','Barnahjúkrun HJÚ715G']:\n",
         "                        if di < len(dagsetning):\n",
         "                            stundatafla.loc[s,dagsetning[di+1]] = stundatafla.loc[s,dagsetning[di+1]] + c + \" (\"+k+\")\"\n",
-        "        # i dunno\n",
-        "        # for c in valnamskeid:\n",
-        "        #     if (v[s,c,d].X > 0):\n",
-        "        #         stundatafla.loc[s,d] = stundatafla.loc[s,d] + c + \" (\"+k+\")\"\n",
-        "        #         if di < len(dagsetning):\n",
-        "        #             stundatafla.loc[s,dagsetning[di+1]] = stundatafla.loc[s,dagsetning[di+1]] + c + \" (\"+k+\")\"\n",
         "# https://stackoverflow.com/questions/62783783/how-to-change-the-background-color-of-excel-cells-rows-using-pandas EÐA bara:\n",
         "stundatafla.to_excel('stundatafla.xlsx')\n",
         "stundatafla"
